# kedro-pyspark-data-processing

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
kedro-pyspark-data-processing/: README.md  pyproject.toml  pytest.ini  requirements.txt  test_requirements.txt
kedro-pyspark-data-processing/conf/base/: catalog.yml  parameters.yml  spark.yml
kedro-pyspark-data-processing/data/raw/: info_transportes.csv
kedro-pyspark-data-processing/src/pyspark_data_processing/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
kedro-pyspark-data-processing/src/pyspark_data_processing/pipelines/data_processing/: nodes.py  pipeline.py
kedro-pyspark-data-processing/src/tests/common_tests/: test_column_type_by_prefix.py  test_no_fully_null_columns.py
kedro-pyspark-data-processing/src/tests/test_nodes/: test_run.py
kedro-pyspark-data-processing/src/tests/utils/: moc_data.py
